--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.parse:parse-android:1.10.0'
 
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
