--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.+'
-    compile 'com.parse:parse-android:1.10.0'
 
+    //Fab button
+    compile 'com.github.clans:fab:1.6.1'
+
+    //Networking - Parse/Retrofit/Gson
+    compile 'com.parse:parse-android:1.10.0'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 }
