--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,14 @@ dependencies {
     //Fab button
     compile 'com.github.clans:fab:1.6.1'
 
-    //Networking - Parse/Retrofit/Gson
-    compile 'com.parse:parse-android:1.10.2'
+    //Parse
+//    compile 'com.parse.bolts:bolts-android:1.+'
+//    compile fileTree(dir: 'src/main/libs', include: 'Parse-*.jar')
+
+    // Module dependency on ParseUI libraries sources
+    compile project(':ParseUI-Widget')
+
+    //Networking - Retrofit/Gson
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 
