--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ dependencies {
 
     //Picasso
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.android.support:cardview-v7:23.1.0'
+
     compile'com.squareup.picasso:picasso:2.5.2'
     compile'com.google.android.gms:play-services:7.8.0'
 }
